--- a/bootstaputilities.html
+++ b/bootstaputilities.html
@@ -17,8 +17,8 @@
   </div>
   <div class="container mt-3">
     <h2>Buttons</h2>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-danger">Danger</button>
+    <button type="button" class="btn btn-primary">Notifications <span class="badge badge-warning">3</span></button>
+    <button type="button" class="btn btn-danger">Calls <span class="badge badge-success">5</span></button>
   </div>  
 </body>
 </html>
