--- a/bootstaputilities.html
+++ b/bootstaputilities.html
@@ -19,6 +19,13 @@
     <h2>Buttons</h2>
     <button type="button" class="btn btn-primary">Notifications <span class="badge badge-warning">3</span></button>
     <button type="button" class="btn btn-danger">Calls <span class="badge badge-success">5</span></button>
+  </div>
+  <div class="container">
+    <h2>Progress Bar</h2>
+    <p>Progress Bar</p>
+    <div class="progress">
+        <div class="progress-bar" style="width:70%;">70%</div>
+    </div>
   </div>  
 </body>
 </html>
